--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+      <link rel="stylesheet" href="css/all.css">
+      <style>
+        *{
+            padding: 0;
+            margin: 0;
+        }
+        .container{
+            width: 100%;
+            display: grid;
+            grid-template-columns: auto auto auto;
+            font-size: 4em;
+        }
+      </style>
 </head>
 <body>
     <header>
@@ -33,7 +46,21 @@
 
 
         <!-- Filoo's section -->
+           <div class="container" style="display: grid; text-decoration: none; list-style-type :none;"
+               <ul>
+                <li><a href="#" class="fab fa-instagram" class="icon" style="text-decoration: none; color: rgb(182, 76, 93);"></a></li>
+                
+                <li><a href="#" class="fab fa-twitter" class="icon" style="text-decoration: none; color: rgb(63, 154, 228);"></a></li>
 
+                <li><a href="#" class="fab fa-youtube" class="icon" style="text-decoration: none; color: rgb(230, 47, 47);"></a></li>
+
+                <li><a href="#" class="fab fa-facebook" class="icon" style="text-decoration: none; color: rgb(49, 49, 211);"></a></li>
+
+                <li><a href="#" class="fab fa-tiktok" class="icon" style="text-decoration: none; background-color: black; color: rgb(238, 198, 198);"></a></li>
+
+                <li><a href="#" class="fab fa-whatsapp" class="icon" style="text-decoration: none; color: rgb(48, 170, 48);"></a></li>
+               </ul>
+           </div>
 
 
         <!-- Praise's section -->
