--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 
 
         <!-- Dani's section -->
+        
+        <form>
+            <label for="username">user name:</label><br>
+            <input type="text" id="username" name="username">
+            <br>
+            <label for="Psword">Password:</label><br>
+            <input type="text" id="Psword" name="Psword">
+            <br>
+            <button style="background-color:rgb(12, 194, 21) ;">submit</button>
+            <button style="background-color: rgb(247, 2, 2) ;">reset</button>
+        </form>
 
 
 
