--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 
 
     <!-- Section 2 -->
+    <div class="debra">
+        <p class="work">Our Work <br></p>
+       <p class="lorem"> Loremipsum dolor sit amet consectetur adipisicing elit. Minima?</p> 
+        <hr>
+        
+    </div>
+    <div class="img">
+        <img src="img/online-advertising-compressed.png" alt="" width="30%">
+        <img src="img/branding-digital-marketing.png" alt="" width="30%">
+        <img src="img/ux-design.png" alt="" width="30%">
+        <img src="img/social-media-campaigns.png" alt="" width="30%">
+    </div>
 
 
 
