--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         
     </div>
     <div class="img">
-        <img src="img/online-advertising-compressed.png" alt="" width="30%">
-        <img src="img/branding-digital-marketing.png" alt="" width="30%">
-        <img src="img/ux-design.png" alt="" width="30%">
-        <img src="img/social-media-campaigns.png" alt="" width="30%">
+        <img src="img/online-advertising-compressed.png" alt="" width="30%" class="o">
+        <img src="img/branding-digital-marketing.png" alt="" width="30%" class="o">
+        <img src="img/ux-design.png" alt="" width="30%" class="o">
+        <img src="img/social-media-campaigns.png" alt="" width="30%" class="o">
     </div>
 
 
