images of brand added

--- a/index.html
+++ b/index.html
@@ -69,7 +69,42 @@
 
 
     <!-- Section 4 -->
-
+    <div class="kinsella">
+      <div class="title">Featured Clients</div>
+      <div class="s2">We've worked with some of the best companies in the world. Here are some of 
+        our Amazing Partners
+      </div>
+      <hr class="hr">
+      </div>
+    <div class="brand_raw1">
+      <div class="image">
+    <img src="img/brand-logo-1.png" alt="image of brand" width="70%" length="70%">
+      </div>
+      <div class="image">
+    <img src="img/brand-logo-2.png" alt="image of brand" width="70%" length="70%">
+      </div>
+      <div class="image">
+    <img src="img/brand-logo-3.png" alt="image of brand"width="70%"length="70%">
+      </div>
+      <div class="image">
+    <img src="img/brand-logo-4.png" alt="image of brand" width="70%" length="70%">
+      </div>
+    </div>
+    <div class="brand_raw2">
+      <div class="image">
+        <img src="img/brand-logo-5.png" alt="image of brand" width="70%" length="70%">
+        </div>
+        <div class="image">
+          <img src="img/brand-logo-6.png" alt="image of brand" width="70%" length="70%">
+        </div>
+        <div class="image">
+          <img src="img/brand-logo-7.png" alt="image of brand" width="70%" length="70%">
+        </div>
+        <div class="image">
+          <img src="img/brand-logo-8.png" alt="image of brand" width="70%" length="70%">
+        </div>
+      </div>
+    
 
 
     <!-- Section 5 -->
