brand images added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
     <!-- Section 3 -->
-    <div class="main"
+    <div class="main">
         <h1> Our Services</h1>
         <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
