--- a/index.html
+++ b/index.html
@@ -117,5 +117,33 @@
 
 
     <!-- Section 7 -->
+  <!--DANY SECTION-->
+  <div class="paragraph">
+    <P>We're happy to hear from you</P>
+    <form>
+      Name     <input type="text" name="Name"/>
+      <br>
+      Email    <input type="text" name="Email"/>
+      <br>
+      Newsletter?  <input type="checkbox"><label for="checkbox">Yes, please</label>
+      <br>
+      Drop us a line       <input type="text" name="Drop us a line" value="Your message"/>
+       <br>
+       <button style="background-color: rgb(238, 72, 163);">send it!</button>
+    </form>
+  </div>
+<div class="footer">
+  <ul>
+    
+    <li><a href="#">About us</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Help $ Support</a></li>
+    <li><a href="#">iOS App</a></li>
+    <li><a href="#">Android App</a></li>
+  </ul>
+         <br>
+           <p1>This webpage has been created for educational purposes by Nahid Akhter and Juann Galvan.</p1><br>
+           <p2>You can feel free to use it and customie it to make your own webpages</p2>
+</div>
 </body>
 </html>
