--- a/index.html
+++ b/index.html
@@ -28,6 +28,95 @@
 
 
     <!-- FAQ Section -->
+    <section id="questions" class="p-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+                <div class="accordion accordion-flush" id="--Questions">
+                    <!--item 1-->
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                         data-bs-target="#question-One">
+                          <p class="lead">Where exactly are you located?</p>
+                        </button>
+                      </h2>
+                      <div id="question-One"
+                       class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body"> <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Unde, culpa totam. Maiores eum reprehenderit numquam, eius nemo aut dolores corrupti 
+                            earum laudantium eveniet quas quod pariatur nobis vitae ipsum ducimus. Facilis, molestias 
+                            incidunt illo fugit modi, ea nihil deleniti dicta nemo
+                            consectetur maiores omnis quasi delectus autem? Quaerat, numquam aperiam.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <!--item 2-->
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                         data-bs-target="#question-two">
+                          <p class="lead">How much does it cost to attend?</p>
+                        </button>
+                      </h2>
+                      <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+                                reiciendis impedit facilis sapiente ea dolore ad sed recusandae, eius, sunt est nihil ipsam omnis,
+                                 veritatis perspiciatis dolorum eum quas assumenda. Dolorum, doloribus ipsam cupiditate minima molestias cumque adipisci nisi
+                                corrupti perspiciatis sint omnis inventore labore eum incidunt natus dignissimos magnam!</p>
+                        </div>
+                      </div>
+                    </div>
+                    <!--item 3-->
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                         data-bs-target="#question-three"> <p class="lead">
+                            What do I need to know?
+                         </p>
+                        </button>
+                      </h2>
+                      <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the 
+                            <code>.accordion-flush</code> class. This is the third item's accordion body.
+                             Nothing more exciting happening here in terms of content, but just filling up the space to make it look, 
+                             at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                      </div>
+                    </div>
+
+                    <!--item 4-->
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                           data-bs-target="#question-four">
+                            <p class="lead">How Do i sign up?</p>
+                          </button>
+                        </h2>
+                        <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                          <div class="accordion-body"> Placeholder content for this accordion, which is intended to demonstrate the 
+                              <code>.accordion-flush</code> class. This is the third item's accordion body.
+                               Nothing more exciting happening here in terms of content, but just filling up the space to make it look, 
+                               at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                          </div>
+                      </div>
+                       <!--item 5-->
+                      <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                         data-bs-target="#question-five">
+                          <p class="lead">Do you help me find a job?</p>
+                        </button>
+                      </h2>
+                      <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the 
+                            <code>.accordion-flush</code> class. This is the third item's accordion body.
+                             Nothing more exciting happening here in terms of content, but just filling up the space to make it look, 
+                             at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                      </div>
+                    </div>
+                </div> 
+            </div>
+        </section>
 
 
 
