fonts folder, and other sections done added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Bootstrap/file/css/bootstrap.css">
+    <link rel=" stylesheet" href="fonts/css/all.css">
     <title>Task 3</title>
 </head>
 <body>
     <!-- Responsive Navbar -->
+    <!--Nav section-->
+    <nav class="navbar navbar-expand-lg bg-info navbar-info py-3">
+      <div class="container">
+          <a href="#" class="navbar-brand"><span class="text-warning">fontend bootcamp</span></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navmenu">
+             <span class="navbar-toggler-icon"></span>
+                </button>
+          <div class="collapse navbar-collapse" id="navmenu">
+              <ul class="nav-bar ms-auto">
+                   <li class="nav-item">
+                      <a href="#learn" class="nav-link">what You'll Learn</a>
+                   </li>
+                   <li class="nav-item">
+                      <a href="#question" class="nav-link">Questions</a>
+                   </li>
+                   <li class="nav-item">
+                      <a href="#instructor" class="nav-link">instructors</a>
+                   </li>
+
+              </ul>
+          </div>
+      </div>
+  </nav>
+
 
     <!-- Showcase with flex classes -->
     <section class="bg-dark text-light p-5 text-center text-sm-start">
@@ -31,6 +57,18 @@
 
 
     <!-- Newsletter with input group -->
+    <section class="bg-warning text-align p-5">
+      <div class="container">
+          <div class="d-md-flex justify-content-between align-items-center">
+              <h3 class="mb-3 mb-md-0">Sign up For our Newsletter</h3>
+
+              <div class="input-group News-input">
+                  <input type="text" class="form-control"placeholder="Enter Email"/>
+                  <button class="btn btn-primary btn-lg" type="button">Button</button>
+              </div>
+          </div>
+      </div>
+  </section>
 
 
 
@@ -181,6 +219,30 @@
 
 
     <!-- Instructors grid card section -->
+    <section id="instructor" class="p-5 bg-info">
+      <div class="container">
+          <div class="text-center text-white">Our Instructors <p class="lead text-center text-white mb-5"> <p class="lead">
+              Our instructors all have 5+ years working as a web Developer 
+              in the industry 
+          </p>  
+          </p>
+          <div class="row g-4">
+              <div class="col-md-6 col-lg-3">
+                  <div class="card-body text-center">
+                      <img src="image/nweeqf97l2md3tlqkjyt.jpg" class="rounded-circle mb-3 col-md-12 row" alt=""/>
+                      <h3 class="card-title mb-3">daniel dony</h3>
+                      <p class="card-text" ></p>
+                           <p class="lead">lead Lorem ipsum dolor sit, amet consectetur 
+                              adipisicing elit.
+                               Rem culpa eaque qui officiis, a voluptatem!</p>
+                           <a href="#"> <i class="fab fa-twitter text-warning mx-1"></i></a>
+                  </div>
+              </div>
+          </div>
+      </div>
+      </div>
+  </section>
+
 
 
 
