image of showcase added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       technologies to prepare them for their first dev role </p>
       <button class="btn btn-primary btn-lg">start Enrollment</button>
             </div>
-                <img class="img-fluid w-5 d-none d-sm-block" src="image/web_developer.png">
+                <img class="img-fluid w-5 d-none d-sm-block" src="image/ba744092fe6e7222d44a5e89cf483d6d.jpg">
                
   
           
